@@ -15,7 +15,7 @@
   | Author: Georg Richter <georg@php.net>                                |
   +----------------------------------------------------------------------+
 
-  $Id: mysqli_prop.c,v 1.14 2004/07/07 08:02:27 georg Exp $ 
+  $Id: mysqli_prop.c,v 1.15 2004/07/26 05:44:06 georg Exp $ 
 */
 
 #ifdef HAVE_CONFIG_H
@@ -82,11 +82,19 @@ int __func(mysqli_object *obj, zval **retval TSRMLS_DC)\
 int link_client_version_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 {
 	ALLOC_ZVAL(*retval);
-	ZVAL_STRING(*retval, MYSQL_SERVER_VERSION, 1);
+	ZVAL_LONG(*retval, MYSQL_VERSION_ID);
 	return SUCCESS;
 }
 /* }}} */
 
+/* {{{ property link_client_info_read */
+int link_client_info_read(mysqli_object *obj, zval **retval TSRMLS_DC)
+{
+	ALLOC_ZVAL(*retval);
+	ZVAL_STRING(*retval, MYSQL_SERVER_VERSION, 1);
+	return SUCCESS;
+}
+/* }}} */
 /* {{{ property link_test_read */
 int link_test_read(mysqli_object *obj, zval **retval TSRMLS_DC)
 {
@@ -191,6 +199,7 @@ MYSQLI_MAP_PROPERTY_FUNC_STRING(stmt_sqlstate_read, mysql_stmt_sqlstate, MYSQLI_
 
 mysqli_property_entry mysqli_link_property_entries[] = {
 	{"affected_rows", link_affected_rows_read, NULL},
+	{"client_info", link_client_info_read, NULL},
 	{"client_version", link_client_version_read, NULL},
 	{"test", link_test_read, NULL},
 	{"connect_errno", link_connect_errno_read, NULL},
