@@ -14,12 +14,14 @@ PHP                                                                        NEWS
   . stream_context_get_default()  (Wez)
   . stream_socket_enable_crypto()  (Wez)
   . SimpleXMLElement->registerXPathNamespace() (Christian)
+  . mysqli->client_info property (Georg)
 - PHP will now respect extension dependencies when initializing.  (Wez)
 - Added Cursor support for MySQL 5.0.x in mysqli (Georg)
 - Added proxy support to ftp wrapper via http. (Sara)
 - Added MDTM support to ftp_url_stat. (Sara)
 - Added zlib stream filter suport. (Sara)
 - Added bz2 stream filter support. (Sara)
+- Fixed bug in mysql->client_version (Georg)
 - Changed the implementation of TRUE, FALSE, and NULL from constants to
   keywords. (Marcus)
 - Fixed ZTS destruction. (Marcus)
